--- a/.github/workflows/CreateRelease.yaml
+++ b/.github/workflows/CreateRelease.yaml
@@ -40,6 +40,7 @@ permissions:
   contents: write
   pull-requests: write
   actions: read
+  packages: write
 
 concurrency: release
 
@@ -189,14 +190,11 @@ jobs:
           asset_name: '${{ matrix.name }}.zip'
           asset_content_type: application/zip
 
-      - name: DeliveryContext
-        id: deliveryContext
-        if: ${{ env.StorageContext }}
+      - name: NuGetContext
+        id: nuGetContext
+        if: ('${{ env.NuGetContext }}' != '') && ('${{ matrix.project }}' == 'Apps')
         run: |
-          $storageContext = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String([System.Environment]::GetEnvironmentVariable('StorageContext')))
-          $nuGetContext = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String([System.Environment]::GetEnvironmentVariable('StorageContext')))
-          Write-Host "::set-output name=storageContext::$storageContext"
-          Write-Host "set-output name=storageContext::$storageContext"
+          $nuGetContext = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String([System.Environment]::GetEnvironmentVariable('NuGetContext')))
           Write-Host "::set-output name=nuGetContext::$nuGetContext"
           Write-Host "set-output name=nuGetContext::$nuGetContext"
 
@@ -204,7 +202,7 @@ jobs:
         uses: freddydk/AL-Go-Actions/Deliver@main
         if: ('${{ env.NuGetContext }}' != '') && ('${{ matrix.project }}' == 'Apps')
         env:
-          deliveryContext: ${{ steps.deliveryContext.outputs.nuGetContext }}
+          deliveryContext: ${{ steps.nuGetContext.outputs.nuGetContext }}
         with:
           type: 'Release'
           projects: ${{ matrix.project }}
@@ -212,11 +210,19 @@ jobs:
           artifacts: ${{ github.event.inputs.appVersion }}
           atypes: 'Apps,TestApps'
 
+      - name: StorageContext
+        id: storageContext
+        if: ('${{ env.StorageContext }}' != '') && ('${{ matrix.project }}' == 'Apps')
+        run: |
+          $storageContext = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String([System.Environment]::GetEnvironmentVariable('StorageContext')))
+          Write-Host "::set-output name=storageContext::$storageContext"
+          Write-Host "set-output name=storageContext::$storageContext"
+
       - name: Deliver to Storage
         uses: freddydk/AL-Go-Actions/Deliver@main
         if: ('${{ env.StorageContext }}' != '') && ('${{ matrix.project }}' == 'Apps')
         env:
-          deliveryContext: ${{ steps.deliveryContext.outputs.storageContext }}
+          deliveryContext: ${{ steps.storageContext.outputs.storageContext }}
         with:
           type: 'Release'
           projects: ${{ matrix.project }}
