--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -2,6 +2,10 @@
 
 on:
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Pull Request Handler"]
+    types:
+      - completed
   push:
     paths-ignore:
       - 'README.md'
@@ -16,7 +20,7 @@ on:
 permissions:
   contents: read
   actions: read
-  packages: write
+  pull-requests: write
 
 defaults:
   run:
@@ -24,6 +28,7 @@ defaults:
 
 jobs:
   Initialization:
+    if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: [ windows-latest ]
     outputs:
       telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
@@ -34,6 +39,7 @@ jobs:
       environmentCount: ${{ steps.ReadSettings.outputs.EnvironmentCount }}
       deliveryTargets: ${{ steps.DetermineDeliveryTargets.outputs.DeliveryTargetsJson }}
       deliveryTargetCount: ${{ steps.DetermineDeliveryTargets.outputs.DeliveryTargetCount }}
+      URL: ${{ steps.DetermineDeliveryTargets.outputs.URL }}
       githubRunner: ${{ steps.ReadSettings.outputs.GitHubRunnerJson }}
     steps:
       - name: Checkout
@@ -59,7 +65,7 @@ jobs:
           secrets: ${{ toJson(secrets) }}
         with:
           settingsJson: ${{ env.Settings }}
-          secrets: 'NuGetContext,StorageContext,AppSourceContext'
+          secrets: 'GitHubPackagesContext,NuGetContext,StorageContext,AppSourceContext'
 
       - name: Determine Delivery Targets
         id: DetermineDeliveryTargets
@@ -71,8 +77,8 @@ jobs:
           if ($env:NuGetContext) {
             $deliveryTargets += @("NuGet")
           }
-          if ($env:useGitHubPackagesForDependencies -eq "true") {
-            $deliveryTargets += @("GitHub Packages")
+          if ($env:GitHubPackagesContext) {
+            $deliveryTargets += @("GitHubPackages")
           }
           if ($env:type -eq "AppSource App" -and $env:AppSourceContinuousDelivery -eq "true") {
             if ($env:AppSourceContext) {
@@ -90,10 +96,13 @@ jobs:
           Write-Host "::set-output name=DeliveryTargetCount::$($deliveryTargets.Count)"
           Write-Host "set-output name=DeliveryTargetCount::$($deliveryTargets.Count)"
           Add-Content -Path $env:GITHUB_ENV -Value "DeliveryTargets=$deliveryTargetsJson"
+          $url = "$ENV:GITHUB_SERVER_URL/$ENV:GITHUB_REPOSITORY/actions/runs/$ENV:GITHUB_RUN_ID"
+          Write-Host "::set-output name=URL::$url"
 
   CheckForUpdates:
     runs-on: [ windows-latest ]
     needs: [ Initialization ]
+    if: (github.event_name != 'workflow_run') && (github.event_name != 'pull_request')
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -131,31 +140,99 @@ jobs:
         with:
           lfs: true
 
+      - name: 'Download Pull Request Changes'
+        if: github.event_name == 'workflow_run'
+        uses: actions/github-script@v6
+        with:
+          script: |
+            var run_id = Number('${{ github.event.workflow_run.id }}');
+            var artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               run_id: run_id
+            });
+            var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
+              return artifact.name == 'Pull_Request_Files'
+            })[0];
+            var download = await github.rest.actions.downloadArtifact({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               artifact_id: matchArtifact.id,
+               archive_format: 'zip'
+            });
+            var fs = require('fs');
+            fs.writeFileSync('.PullRequestChanges.zip', Buffer.from(download.data));
+
+      - name: Apply Pull Request Changes
+        if: github.event_name == 'workflow_run'
+        run: |
+          $ErrorActionPreference = "STOP"
+          $location = (Get-Location).path
+          $prfolder = '.PullRequestChanges'
+          Expand-Archive -Path ".\$prfolder.zip" -DestinationPath ".\$prfolder"
+          Remove-Item -Path ".\$prfolder.zip" -force
+          Get-ChildItem -Path $prfolder -Recurse -File | ForEach-Object {
+            $newPath = $_.FullName.Replace("$prfolder\","")
+            $newFolder = [System.IO.Path]::GetDirectoryName($newPath)
+            if (-not (Test-Path $newFolder)) {
+              New-Item $newFolder -ItemType Directory | Out-Null
+            }
+            Write-Host "Copying $($_.FullName) to $newFolder"
+            Copy-Item $_.FullName -Destination $newFolder -Force
+          }
+
+      - name: Create Pull Request Comment
+        uses: actions/github-script@v6
+        if: github.event_name == 'pull_request'
+        continue-on-error: true
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            var response = await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '## CI/CD\n\n*This check is running...* ([details](${{ needs.Initialization.outputs.URL }}))\n\n'
+            })
+            var fs = require('fs');
+            fs.writeFileSync('comment_id', response.data.id.toString())
+
+      - name: Update Pull Request Comment
+        uses: actions/github-script@v6
+        if: github.event_name == 'workflow_run'
+        continue-on-error: true
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            var fs = require('fs');
+            var comment_id = Number(fs.readFileSync('comment_id'));
+            var response = await github.rest.issues.getComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: comment_id,
+            });
+            var body = response.data.body
+            github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: comment_id,
+              body: body.concat('*This check is running...* ([details](${{ needs.Initialization.outputs.URL }}))\n\n')
+            });
+
       - name: Read settings
         uses: freddydk/AL-Go-Actions/ReadSettings@main
         with:
           parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
           project: ${{ matrix.project }}
 
-      - name: Read secrets (PR)
-        uses: freddydk/AL-Go-Actions/ReadSecrets@main
-        if: github.event_name == 'pull_request'
-        env:
-          secrets: ${{ toJson(secrets) }}
-        with:
-          parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
-          settingsJson: ${{ env.Settings }}
-          secrets: 'licenseFileUrl,insiderSasToken,KeyVaultCertificateUrl,KeyVaultCertificatePassword,KeyVaultClientId'
-
       - name: Read secrets
         uses: freddydk/AL-Go-Actions/ReadSecrets@main
-        if: github.event_name != 'pull_request'
         env:
           secrets: ${{ toJson(secrets) }}
         with:
           parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
           settingsJson: ${{ env.Settings }}
-          secrets: 'licenseFileUrl,insiderSasToken,CodeSignCertificateUrl,CodeSignCertificatePassword,KeyVaultCertificateUrl,KeyVaultCertificatePassword,KeyVaultClientId,StorageContext'
+          secrets: 'licenseFileUrl,insiderSasToken,CodeSignCertificateUrl,CodeSignCertificatePassword,KeyVaultCertificateUrl,KeyVaultCertificatePassword,KeyVaultClientId,StorageContext,GitHubPackagesContext'
 
       - name: Run pipeline
         uses: freddydk/AL-Go-Actions/RunPipeline@main
@@ -181,7 +258,7 @@ jobs:
 
       - name: Publish artifacts - apps
         uses: actions/upload-artifact@v2
-        if: github.event_name != 'pull_request' && (github.ref_name == 'main' || startswith(github.ref_name, 'release/'))
+        if: (github.event_name != 'workflow_run') && (github.event_name != 'pull_request') && (github.ref_name == 'main' || startswith(github.ref_name, 'release/'))
         with:
           name: ${{ env.appsArtifactsName }}
           path: '${{ matrix.project }}/.buildartifacts/Apps/'
@@ -189,7 +266,7 @@ jobs:
 
       - name: Publish artifacts - dependencies
         uses: actions/upload-artifact@v2
-        if: github.event_name != 'pull_request' && (github.ref_name == 'main' || startswith(github.ref_name, 'release/'))
+        if: (github.event_name != 'workflow_run') && (github.event_name != 'pull_request') && (github.ref_name == 'main' || startswith(github.ref_name, 'release/'))
         with:
           name: ${{ env.dependenciesArtifactsName }}
           path: '${{ matrix.project }}/.buildartifacts/Dependencies/'
@@ -197,7 +274,7 @@ jobs:
 
       - name: Publish artifacts - test apps
         uses: actions/upload-artifact@v2
-        if: github.event_name != 'pull_request' && (github.ref_name == 'main' || startswith(github.ref_name, 'release/'))
+        if: (github.event_name != 'workflow_run') && (github.event_name != 'pull_request') && (github.ref_name == 'main' || startswith(github.ref_name, 'release/'))
         with:
           name: ${{ env.testAppsArtifactsName }}
           path: '${{ matrix.project }}/.buildartifacts/TestApps/'
@@ -227,6 +304,142 @@ jobs:
           path: '${{ matrix.project }}/bcptTestResults.json'
           if-no-files-found: ignore
 
+      - name: Generate Test Result MD
+        if: (success() || failure()) && ((github.event_name == 'workflow_run') || (github.event_name == 'pull_request')) && (hashFiles(format('{0}/TestResults.xml',matrix.project)) != '')
+        id: generateTestResultMD
+        continue-on-error: true
+        run: |
+          $ErrorActionPreference = "STOP"
+          $sb = [System.Text.StringBuilder]::new()
+          $testResults = [xml](Get-Content '${{ matrix.project }}/TestResults.xml')
+          $appNames = @($testResults.testsuites.testsuite | ForEach-Object { $_.Properties.property | Where-Object { $_.Name -eq "appName" } | ForEach-Object { $_.Value } } | Select-Object -Unique)
+          if (-not $appNames) {
+              $appNames = @($testResults.testsuites.testsuite | ForEach-Object { $_.Properties.property | Where-Object { $_.Name -eq "extensionId" } | ForEach-Object { $_.Value } } | Select-Object -Unique)
+          }
+          $totalTests = 0
+          $totalTime = 0.0
+          $totalFailed = 0
+          $totalSkipped = 0
+          $testResults.testsuites.testsuite | ForEach-Object {
+              $totalTests += $_.Tests
+              $totalTime += [decimal]::Parse($_.time, [System.Globalization.CultureInfo]::InvariantCulture)
+              $totalFailed += $_.failures
+              $totalSkipped += $_.skipped
+          }
+          Write-Host "$($appNames.Count) TestApps, $totalTests tests, $totalFailed failed, $totalSkipped skipped, $totalTime seconds"
+          if ($totalFailed) {
+              $pre = "<i><b>"
+              $post = "</b></i>"
+          }
+          else {
+              $pre = "<i>"
+              $post = "</i>"
+          }
+          $sb.AppendLine("<details><summary>$pre$($appNames.Count) TestApps, $totalTests tests, $totalFailed failed, $totalSkipped skipped, $totalTime seconds$post</summary>") | Out-Null
+          $appNames | ForEach-Object {
+              $appName = $_
+              $appTests = 0
+              $appTime = 0.0
+              $appFailed = 0
+              $appSkipped = 0
+              $suites = $testResults.testsuites.testsuite | where-Object { $_.Properties.property | Where-Object { $_.Value -eq $appName } }
+              $suites | ForEach-Object {
+                  $appTests += $_.tests
+                  $appFailed += $_.failures
+                  $appSkipped += $_.skipped
+                  $appTime += [decimal]::Parse($_.time, [System.Globalization.CultureInfo]::InvariantCulture)
+              }
+              Write-Host "- $appName, $appTests tests, $appFailed failed, $appSkipped skipped, $appTime seconds"
+              if ($appFailed) {
+                  $pre = "<i><b>"
+                  $post = "</b></i>"
+              }
+              else {
+                  $pre = "<i>"
+                  $post = "</i>"
+              }
+              $sb.AppendLine("<details><summary>$pre$appName, $appTests tests, $appFailed failed, $appSkipped skipped, $appTime seconds$post</summary>") | Out-Null
+              $suites | ForEach-Object {
+                  Write-Host "  - $($_.name), $($_.tests) tests, $($_.failures) failed, $($_.skipped) skipped, $($_.time) seconds"
+                  if ($_.failures -gt 0) {
+                      $pre = "<i><b>"
+                      $post = "</b></i>"
+                  }
+                  else {
+                      $pre = "<i>"
+                      $post = "</i>"
+                  }
+                  $sb.AppendLine("<details><summary>$pre$($_.name), $($_.tests) tests, $($_.failures) failed, $($_.skipped) skipped, $($_.time) seconds$post</summary>") | Out-Null
+                  $_.testcase | ForEach-Object {
+                      if ($_.ChildNodes.Count -gt 0) {
+                          Write-Host "    - $($_.name), Failure, $($_.time) seconds"
+                          $sb.AppendLine("<details><summary><i><b>$($_.name), Failure</b></i></summary>") | Out-Null
+                          $_.ChildNodes | ForEach-Object {
+                              Write-Host "      - Error: $($_.message)"
+                              Write-Host "        Stacktrace:"
+                              Write-Host "        $($_."#text".Trim().Replace("`n","`n        "))"
+                              $sb.AppendLine("<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Error: $($_.message)</b></i><br/>") | Out-Null
+                              $sb.AppendLine("<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Stack trace</i><br/>") | Out-Null
+                              $sb.AppendLine("<i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$($_."#text".Trim().Replace("`n","<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"))</i><br/>") | Out-Null
+                          }
+                          $sb.AppendLine("</details>") | Out-Null
+                      }
+                      else {
+                          Write-Host "    - $($_.name), Success, $($_.time) seconds"
+                          $sb.AppendLine("&nbsp;&nbsp;&nbsp;&nbsp;<i>$($_.name), Success</i><br/>") | Out-Null
+                      }
+                  }
+                  $sb.AppendLine("</details>") | Out-Null
+              }
+              $sb.AppendLine("</details>") | Out-Null
+          }
+          $sb.AppendLine("</details>") | Out-Null
+          Write-Host "::set-output name=TestResultMD::$($sb.ToString().Replace("`r",[string]::Empty).Replace("`n","\n"))"
+
+      - name: Update Pull Request Comment
+        uses: actions/github-script@v6
+        if: success() && ((github.event_name == 'workflow_run') || (github.event_name == 'pull_request'))
+        continue-on-error: true
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            var fs = require('fs');
+            var comment_id = Number(fs.readFileSync('comment_id'));
+            var response = await github.rest.issues.getComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: comment_id,
+            });
+            var body = response.data.body
+            github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: comment_id,
+              body: body.concat('*This check successfully completed* ([details](${{ needs.Initialization.outputs.URL }}))\n\n'.concat('${{ steps.generateTestResultMD.outputs.TestResultMD }}'))
+            });
+
+      - name: Update Pull Request Comment
+        uses: actions/github-script@v6
+        if: failure() && ((github.event_name == 'workflow_run') || (github.event_name == 'pull_request'))
+        continue-on-error: true
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            var fs = require('fs');
+            var comment_id = Number(fs.readFileSync('comment_id'));
+            var response = await github.rest.issues.getComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: comment_id,
+            });
+            var body = response.data.body
+            github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: comment_id,
+              body: body.concat('*This check failed* ([details](${{ needs.Initialization.outputs.URL }}))\n\n'.concat('${{ steps.generateTestResultMD.outputs.TestResultMD }}'))
+            });
+
       - name: Cleanup
         if: always()
         uses: freddydk/AL-Go-Actions/PipelineCleanup@main
@@ -236,7 +449,7 @@ jobs:
 
   Deploy:
     needs: [ Initialization, Build ]
-    if: ${{ github.event_name != 'pull_request' && github.ref_name == 'main' && needs.Initialization.outputs.environmentCount > 0 }}
+    if: ${{ (github.event_name != 'workflow_run') && (github.event_name != 'pull_request') && (github.ref_name == 'main') && (needs.Initialization.outputs.environmentCount > 0) }}
     strategy: ${{ fromJson(needs.Initialization.outputs.environments) }}
     runs-on: ${{ fromJson(matrix.os) }}
     name: Deploy to ${{ matrix.environment }}
@@ -333,7 +546,7 @@ jobs:
 
   Deliver:
     needs: [ Initialization, Build ]
-    if: ${{ github.event_name != 'pull_request' && github.ref_name == 'main' && needs.Initialization.outputs.deliveryTargetCount > 0 }}
+    if: ${{ (github.event_name != 'workflow_run') && (github.event_name != 'pull_request') && (github.ref_name == 'main') && (needs.Initialization.outputs.deliveryTargetCount > 0) }}
     strategy:
       matrix:
         deliveryTarget: ${{ fromJson(needs.Initialization.outputs.deliveryTargets) }}
@@ -379,7 +592,7 @@ jobs:
           artifacts: '${{ github.workspace }}\artifacts'
 
   PostProcess:
-    if: always()
+    if: always() && (github.event.pull_request.head.repo.full_name == github.repository)
     runs-on: [ windows-latest ]
     needs: [ Initialization, Build, Deploy, Deliver ]
     steps:
