--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,6 +1,6 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/freddydk/AL-Go@bcptreport",
+  "templateUrl": "https://github.com/mazhelez/AL-Go@fix-incremental-build",
   "environments": [
     "FAT (FAT)",
     "PROD (PROD)"
@@ -8,5 +8,6 @@
   "FAT_AuthContextSecretName": "QA_AuthContext",
   "PROD_AuthContextSecretName": "QA_AuthContext",
   "doNotRunBcptTests": true,
-  "useGitHubPackagesForDependencies": true
+  "useGitHubPackagesForDependencies": true,
+  "templateSha": "be9250487b32dac0232aafe5a7f99bbbb6fe7de7"
 }
