--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,6 +1,6 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/freddydk/AL-Go@nuget",
+  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@preview",
   "environments": [
     "FAT (FAT)",
     "PROD (PROD)"
@@ -9,5 +9,5 @@
   "PROD_AuthContextSecretName": "QA_AuthContext",
   "doNotRunBcptTests": true,
   "useGitHubPackagesForDependencies": true,
-  "templateSha": "679d5cf17e51b1cd558453f429df6e59bf2ce95c"
+  "templateSha": "becb26e1f895fb75145bbc10535afb19c09bff5c"
 }
